<resources>
    <string name="app_name">PayFast</string>
    <string name="go_back">Go back</string>
    <string name="heading">HEADING</string>
    <string name="safe">Your Details are safe with us</string>
    <string name="verify">Enter your phone number to verify yourself</string>
    <string name="login_greetings">Welcome back</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="new_user">New User</string>
    <string name="details_reg">Enter details below to register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="verify_yourself">Verify Yourself</string>
    <string name="verify_number">Please verify your phone number to continue</string>
    <string name="num">Please enter otp sent to</string>
    <string name="_91_7977192875">+91 7977192875</string>
    <string name="otp">OTP</string>
    <string name="wrong_number">Wrong Number ?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify</string>
    <string name="select_one">Select One</string>
    <string name="select_one_">Select any type to generate tickets for your journey</string>
    <string name="store_value_pass">Store Value Pass QR</string>
    <string name="desc_tp">It\'s a digital pass to ease the journey of the passenger</string>
    <string name="trip_pass">Trip Pass QR</string>
    <string name="desc_svp">Store Value pass is for easy travel without any hassle</string>
    <string name="qr_desc">Digital tickets for one-way journey or return journey between any two stations</string>
    <string name="metro_qr_ticket">SJT / RJT QR Code</string>
    <string name="upcoming">UPCOMING</string>
    <string name="history">HISTORY</string>
    <string name="mobile_qr">SJT / RJT QR Ticket</string>
    <string name="mobile_qr_">Fill below details to generate mobile Qr ticket</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="single">Single</string>
    <string name="return_">Return</string>
    <string name="_1">1</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="_0">₹ 0</string>
    <string name="_0_ticket">₹ 0 / TICKET</string>
    <string name="order_image">Order Image</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="single_journey_ticket">Single Journey Ticket</string>
    <string name="to">to</string>
    <string name="s1234567890">S1234567890</string>
    <string name="scan">Qr code to scan</string>
    <string name="generated">GENERATED</string>
    <string name="need_help">NEED HELP</string>
    <string name="share">SHARE QR</string>
    <string name="mid">MID:</string>
    <string name="m123456789">M123456789</string>
    <string name="total_price">TOTAL PRICE:</string>
    <string name="passenger_1_outward_ticket">Passenger 1: Outward Ticket</string>
    <string name="powered_by_payfast">Powered By PayFast</string>
    <string name="metrologo">MetroLogo</string>
    <string name="no_pass_to_show">NO PASS TO SHOW</string>
    <string name="govind_yadav">GOVIND YADAV</string>
    <string name="m0123456789">M0123456789</string>
    <string name="balanceamount">Balance: ₹ 400</string>
    <string name="order_new_sv_pass">ORDER NEW SV PASS</string>
    <string name="pass_amount">PASS AMOUNT</string>
    <string name="_100">100</string>
    <string name="generate_new_trip">GENERATE NEW TRIP</string>
    <string name="view_qr_ticket">VIEW QR TICKET</string>
    <string name="reload_pass">RELOAD PASS</string>
    <string name="reload_your_pass">RELOAD YOUR PASS</string>
    <string name="pass_price">PASS PRICE</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="ticket_dashboard">Ticket Dashboard</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="recent_orders">Frequent Orders</string>
    <string name="upcoming_orders">Upcoming Tickets</string>
    <string name="reload_pass_sv">Reload Pass</string>
    <string name="trip_pass_heading">Trip Pass</string>
    <string name="trip_pass_desc">45 Trip Pass journey from source to destination</string>
    <string name="balance_trips">Balance Trips</string>
    <string name="tp_name_label">Name</string>
    <string name="tp_label_mx_id">Pass Number</string>
    <string name="reload">Reload</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="refund_pass">REFUND PASS</string>
    <string name="mumbai_metro_one">Mumbai Metro One</string>
    <string name="fare">Fare</string>
    <string name="balance">Balance</string>
    <string name="dashboard">Dashboard</string>
    <string name="booking_date">Booking Date</string>
    <string name="outward">OUTWARD</string>
    <string name="generate_new_trip_button_content_desc">generate new trip button</string>
    <string name="welcome">Welcome</string>
    <string name="atek_logo">Atek Logo</string>
    <string name="loading">loading…</string>
    <string name="store_value_pass_">Store Value Pass</string>
    <string name="chakala_jb_nagar">Chakala JB Nagar</string>
    <string name="data">DATA</string>
    <string name="western_express">Western Express</string>
    <string name="_30">₹30</string>
    <string name="right_arrow">right_arrow</string>
    <string name="logo_mumbai_metro_one_image_desc">Logo of Mumbai Metro One</string>
    <string name="name_placeholder">Rahul</string>
    <string name="qr_tickets">QR Tickets</string>
    <string name="ticket_price_modal">Ticket Price:</string>
    <string name="refund_amount_modal">Refund Amount:</string>
    <string name="processing_fee_modal">Processing Fee:</string>
    <string name="outward_toggle">OUTWARD</string>
    <string name="return_toggle">RETURN</string>
    <string name="store_value_pass_qr_title">Store Value Pass QR</string>
    <string-array name="stations_list">
        <item>Versova</item>
        <item>DN Nagar</item>
        <item>Azad Nagar</item>
        <item>Andheri</item>
        <item>Western Express</item>
        <item>Chakala JB Nagar</item>
        <item>Airport Road</item>
        <item>Marol Naka</item>
        <item>Saki Naka</item>
        <item>Asalpha</item>
        <item>Jagruti Nagar</item>
        <item>Ghatkopar</item>
    </string-array>
</resources>