<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/Heading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/heading"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/OptionButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/safe"
            android:padding="10dp"
            android:src="@drawable/verified" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:text="@string/verify_yourself"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:textColor="@color/white"
        android:text="@string/verify_number" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20sp"
                android:src="@drawable/ic_otp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/num" />

                <TextView
                    android:id="@+id/UserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/_91_7977192875"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/OTPLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/otp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/OTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/WrongNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_dark"
                        android:text="@string/wrong_number" />

                    <TextView
                        android:id="@+id/OtpCounter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/ResendOtp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:text="@string/resend_otp"
                        android:textColor="@color/primary_dark"
                        android:visibility="gone"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/VerifyOtpProgressBar"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/VerifyOtp"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/verify_otp"
                    app:cornerRadius="50dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>