<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/go_back"
        android:padding="10dp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/Heading"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/heading"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/OptionButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/safe"
        android:padding="10dp"
        android:src="@drawable/verified" />

</LinearLayout>