<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:backgroundTint="@color/primary"
        app:cardElevation="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/go_back"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/Heading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:fontFamily="@font/balooregular"
                android:text="@string/mumbai_metro_one"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/metro_logo_small_2"
                android:drawablePadding="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:text="@string/login_greetings"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/verify" />


    <ImageView
        android:layout_width="180dp"
        android:layout_height="18sp"
        android:layout_marginBottom="-12dp"
        android:src="@drawable/orangestrip" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20sp"
                android:src="@drawable/ic_login"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/phone_number"
                app:prefixText="+91">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/LoginProgressBar"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                app:cornerRadius="50dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/or" />

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/register"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/secondary_light"
                android:textColor="@color/primary" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>