<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_inverted"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.LoginActivity">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/go_back"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/Heading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/heading"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/Profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/safe"
                android:padding="10dp"
                android:src="@drawable/ic_person" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:text="@string/your_tickets"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/white"
            android:text="@string/select_one_" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TopBar"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ticketsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goToUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                app:icon="@drawable/upcoming"
                android:layout_marginEnd="20dp"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary_dark" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_marginStart="20dp"
                app:icon="@drawable/history"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>