<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.QR.MobileQr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/Heading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mumbai_metro_one"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/safe"
            android:padding="10dp"
            android:src="@drawable/ic_person" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:text="@string/mobile_qr"
        android:textStyle="bold"
        android:textSize="30sp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_light"
        app:cardCornerRadius="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_order"
                    android:contentDescription="@string/order_image" />

                <!--SOURCE-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/SourceLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/source"
                    app:startIconDrawable="@drawable/train">

                    <AutoCompleteTextView
                        android:id="@+id/Source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--DESTINATION-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DestinationLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/destination"
                    app:startIconDrawable="@drawable/train">

                    <AutoCompleteTextView
                        android:id="@+id/Destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--TYPE AND FARE-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/JourneyGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/SingleJourney"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/single" />

                        <RadioButton
                            android:id="@+id/ReturnJourney"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/return_" />

                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/SubButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/minus"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/TicketCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:text="@string/_1"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/AddButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/plus"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                </LinearLayout>

                <!--DETAILS-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TotalFare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        android:text="@string/_0"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/FarePerTicket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_0_ticket"
                        android:gravity="center" />

                    <ProgressBar
                        android:id="@+id/OrderProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:visibility="gone"/>

                </LinearLayout>

                <!--PROGRESS BAR-->
                <ProgressBar
                    android:id="@+id/MobileQrProgressBar"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/OrderButton"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/proceed_to_pay"
                    app:cornerRadius="50dp" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>